--- a/templates/base_index.html.twig
+++ b/templates/base_index.html.twig
@@ -21,15 +21,14 @@
             {% block body %}
                 
             {% endblock %}
-        </div>
-        {% block footer %}
-            <footer class="bg-dark text-white mb-0">
-                <div class="text-center" style="line-height: 2.5;">
-                    Ferest Salud IPS | © Copyright 2020 by Neftcode. Todos los derechos reservados.
+            {% block footer %}
+                <div class="ft-index">
+                    <div class="text-center py-3 pl-2 pr-2 bg-dark text-white">Ferest Salud IPS powered by <b>Neftcode ©</b>
+                    </div>
                 </div>
-            </footer>
-            <hr id="final_contenido">
-        {% endblock %}
+                <hr id="final_contenido">
+            {% endblock %}
+        </div>
         {% block javascripts %}
             <script type="text/javascript" src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/jquery-ui.js') }}"></script>
