--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -5,18 +5,16 @@
 {% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>{{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/Clinica/src/Controller/DashboardController.php'|file_link(0) }}">src/Controller/DashboardController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/Clinica/templates/dashboard/index.html.twig'|file_link(0) }}">templates/dashboard/index.html.twig</a></code></li>
-    </ul>
+<div class="row justify-content-center text-center">
+    <div class="col-md-6">
+        <img src="{{ asset('images/ferestIPS.png') }}" alt="Logo" class="w-100">
+    </div>
 </div>
+<div class="row justify-content-center text-center mb-5">
+	<div class="col-md-6">
+		<a href="{{ path('app_login') }}" class="btn btn-ferest">Iniciar sesión</a>
+	</div>
+</div>
+
 {% endblock %}
