--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,51 +4,57 @@
     {{parent()}} - Iniciar sesión
 {% endblock %}
 {% block body %}
-<style type="text/css">
-    img.avatar {
-        width: 100%;
-        border-radius: 50%;
-    }
-</style>
-<form method="post" autocomplete="off">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
-    {% if app.user %}
-        <div class="mb-3">
-            Usted se encuentra logueado como <b>{{ app.user.username }}</b>, <a href="{{ path('app_logout') }}">Cerrar sesión</a>
+<div class="row justify-content-center d-flex align-items-center h-75">
+    <div class="col-md-4">
+        <div class="col-md-12">
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
         </div>
-    {% endif %}
-    <div class="item_formulario_8">
-        <div class="imgcontainer">
-            <img src="{{ asset('images/ferest_logo.png') }}" alt="Logo" class="avatar">
+        <div class="col-md-12">
+            {% if app.user %}
+                <div class="mb-3">
+                    Usted se encuentra logueado como <b>{{ app.user.username }}</b>, <a href="{{ path('app_logout') }}">Cerrar sesión</a>
+                </div>
+            {% endif %}
         </div>
-        {# <div class="m-0 mt-1 justify-content-center text-center">
-            <h1 class="h3 mb-3 font-weight-normal justify-content-center">Iniciar sesión</h1>
-        </div> #}
-        <label for="inputUsername">Usuario</label>
-        <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control form-control-sm mb-2" required autofocus>
-        <label for="inputPassword">Contraseña</label>
-        <input type="password" name="password" id="inputPassword" class="form-control form-control-sm mb-2" required>
+        <div class="col-md-12">
+            <div class="imgcontainer">
+                <img src="{{ asset('images/ferestIPS.png') }}" alt="Logo" class="w-100">
+            </div>
+        </div>
+        <div class="col-md-12">
+            <form method="post" autocomplete="off">
+                {# <div class="m-0 mt-1 justify-content-center text-center">
+                    <h1 class="h3 mb-3 font-weight-normal justify-content-center">Iniciar sesión</h1>
+                </div> #}
+                <label for="inputUsername">Usuario</label>
+                <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control form-control-sm mb-2" required autofocus>
+                <label for="inputPassword">Contraseña</label>
+                <input type="password" name="password" id="inputPassword" class="form-control form-control-sm mb-2" required>
 
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-        <div class="m-0 mt-1 justify-content-center">
-            <button class="btn btn-lg btn-primary w-100" type="submit">
-                Iniciar sesión
-            </button>
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                <div class="m-0 mt-1 justify-content-center">
+                    <button class="btn btn-lg btn-ferest w-100" type="submit">
+                        Iniciar sesión
+                    </button>
+                    <a href="{{ path('index') }}" class="btn btn-lg btn-danger mt-2 w-100">
+                        Cancelar
+                    </a>
+                </div>
+                {#
+                    Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                    See https://symfony.com/doc/current/security/remember_me.html
+
+                    <div class="checkbox mb-3">
+                        <label>
+                            <input type="checkbox" name="_remember_me"> Remember me
+                        </label>
+                    </div>
+                #}
+            </form>
         </div>
     </div>
+</div>
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-</form>
 {% endblock %}
