--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -14,4 +14,6 @@
 <div class="row justify-content-center text-center mb-5">
 	<div class="col-md-6">
 		<a href="{{ path('app_login') }}" class="btn btn-ferest">Iniciar sesión</a>
+    </div>
+</div>
 {% endblock %}
