--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -13,7 +13,7 @@
 </div>
 <div class="row justify-content-center text-center mb-5">
 	<div class="col-md-6">
-		<a href="{{ path('app_login') }}" class="btn btn-ferest">Iniciar sesión</a>
+		<a href="index.php{{ path('app_login') }}" class="btn btn-ferest">Iniciar sesión</a>
     </div>
 </div>
 {% endblock %}
