--- a/public/css/daterangepicker.css
+++ b/public/css/daterangepicker.css
@@ -174,7 +174,7 @@
 }
 
 .daterangepicker td.available:hover, .daterangepicker th.available:hover {
-  background-color: #7A1F5E;/*#eee*/
+  background-color: #0e7a73;/*#eee*/
   border-color: transparent;
   color: #FFFFFF;/*inherit*/
 }
@@ -210,7 +210,7 @@
 }
 
 .daterangepicker td.active, .daterangepicker td.active:hover {
-  background-color: #7A1F5E;
+  background-color: #0e7a73;
   border-color: transparent;
   color: #fff;
 }
@@ -247,7 +247,7 @@
   margin: 0 auto;
   background: #FFFFFF;/*#eee*/
   border: 1px solid #eee;
-  border-color: #7A1F5E;
+  border-color: #0e7a73;
   padding: 2px;
   outline: 0;
   font-size: 12px;
@@ -329,7 +329,7 @@
 }
 
 .daterangepicker_today {
-  border: 2px solid #175E83 !important;
+  border: 2px solid #156661 !important;
 }
 
 /*  Larger Screen Styling */
