--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -94,6 +94,8 @@
         {% block javascripts %}
             <script type="text/javascript" src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/jquery-ui.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/vue.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/axios.min.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/popper.min.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/menu-abrir.js') }}"></script>
